Plot storage benchmark data with gnuplot.